--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
 config.folder=${file.reference.PirroneR-config}
 file.reference.PirroneR-config=config
 file.reference.PirroneR-public_html=public_html
